--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="grid">
-      <div class="logo card">CP</div>
+      <div class="logo card">CP Cheating</div>
       <div class="nav card">
         <ul>
           <il>11bar</il>
