--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               CP App, Cheating Game and video Course
             </p>
             <strong class="project_title">
-              <span>Flixr</span>
+              <span>CP</span>
               <a href="https://t.me/CP_Cheating/1323" class="more_details"
                 >More Details</a
               >
