--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="content">
         <div class="connect">
           <strong class="contents_title">PayPal</strong>
-          <a href="#" class="contents_link"
+          <a href="https://www.paypal.com/paypalme/MohamadCP" class="contents_link"
             ><p>https://www.paypal.com/paypalme/MohamadCP</p></a
           >
         </div>
